--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
 -->
 <html>
 	<head>
-		<title>³¤²»´óµÄÐ¡»ÒµÄ²©¿Í</title>
+		<title>é•¿ä¸å¤§çš„å°ç°çš„åšå®¢</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-		<script>alert("½¨ÉèÖÐ£¡")</script>
+		<script>alert("å»ºè®¾ä¸­!")</script>
 	</head>
 	<body class="is-preload">
 		<!-- Wrapper -->
