--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-		<script>alert("你好!王聪")</script>
+		<script>alert("建设中！")</script>
 	</head>
 	<body class="is-preload">
 		<!-- Wrapper -->
