--- a/index.html
+++ b/index.html
@@ -12,6 +12,24 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 		<script>alert("建设中！")</script>
+	<script type="text/javascript" charset="utf-8"  		src="assets/js/L2Dwidget.0.min.js"></script>
+	<script type="text/javascript" charset="utf-8"  		src="assets/js/L2Dwidget.min.js"></script>
+	<script type="text/javascript">
+    		L2Dwidget.init({"display": {
+        		"superSample": 2,
+        		"width": 200,
+        		"height": 400,
+            	 	"position": "right",
+            	   	  	"hOffset": 0,
+        			"vOffset": 0
+         	 }
+   	  });
+	</script>
+	<style>
+		#live2dcanvas {
+    			border: 0 !important;
+		}
+	</style>
 	</head>
 	<body class="is-preload">
 		<!-- Wrapper -->
